--- a/wallettemplate/src/main/resources/wallettemplate/main.fxml
+++ b/wallettemplate/src/main/resources/wallettemplate/main.fxml
@@ -16,7 +16,7 @@
 
 <AnchorPane maxHeight="Infinity" maxWidth="Infinity" minHeight="200.0" minWidth="300.0" prefHeight="451.0" prefWidth="800.0" styleClass="root-pane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="wallettemplate.MainController">
   <children>
-    <Label layoutX="14.0" layoutY="14.0" text="Balance">
+    <Label layoutX="14.0" layoutY="14.0" text="余额">
       <font>
         <Font name="System Bold" size="25.0" fx:id="x1" />
       </font>
@@ -31,13 +31,13 @@
             <Color blue="0.750" green="0.750" red="0.750" fx:id="x2" />
           </textFill>
         </Label>
-        <Label font="$x1" text="BTC" textFill="$x2" />
+        <Label font="$x1" text="MBC" textFill="$x2" />
       </children>
     </HBox>
     <HBox fx:id="controlsBox" alignment="TOP_LEFT" fillHeight="true" layoutX="14.0" layoutY="347.0" minHeight="16.0" prefHeight="36.0" prefWidth="243.0" spacing="10.0" translateY="60.0" visible="true" AnchorPane.bottomAnchor="17.0">
       <children>
-        <Button defaultButton="true" mnemonicParsing="false" styleClass="fat-button" text="Primary" />
-        <Button cancelButton="true" mnemonicParsing="false" styleClass="fat-button" text="Secondary" />
+        <Button defaultButton="true" mnemonicParsing="false" styleClass="fat-button" text="主要" />
+	<Button cancelButton="true" mnemonicParsing="false" styleClass="fat-button" text="次要" />
       </children>
     </HBox>
     <ImageView fitHeight="243.0" fitWidth="243.0" opacity="0.28" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="-36.0" AnchorPane.rightAnchor="-34.0">
@@ -60,8 +60,8 @@
     </StackPane>
     <HBox spacing="20" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="17.0">
        <children>
-           <Button onAction="#settingsClicked" style="-fx-base: white;" styleClass="fat-button" text="Settings" />
-           <Button id="sendMoneyOut" fx:id="sendMoneyOutBtn" alignment="CENTER" mnemonicParsing="false" onAction="#sendMoneyOut" style="-fx-base: lightgreen; -fx-font-weight: bold" styleClass="fat-button" text="Send money out" />
+           <Button onAction="#settingsClicked" style="-fx-base: white;" styleClass="fat-button" text="设置" />
+           <Button id="sendMoneyOut" fx:id="sendMoneyOutBtn" alignment="CENTER" mnemonicParsing="false" onAction="#sendMoneyOut" style="-fx-base: lightgreen; -fx-font-weight: bold" styleClass="fat-button" text="发送给.." />
        </children>
     </HBox>
   </children>
